--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,7 +3,7 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "An opinionated guide & set of tools for digital publishing",
+    "tagline": "Open source resource for local publishers, curated by Philadelphia Publishing Company",
     "contact": "Contact",
     "mission": "Mission",
     "projects": "Projects",
